# did-contract

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
e2e-test/config/common/config/: app.toml
src/: contract.rs  e2e_test.rs  error.rs  lib.rs  msg.rs  multiset.rs  state.rs
src/e2e_test/: cosmos.rs  docker.rs  mod.rs  tests.rs
src/test/: add_controller.rs  add_service.rs  create_did_document.rs  delete_controller.rs  delete_did_document.rs  delete_service.rs  do_controllers_exist.rs  does_controller_exist.rs  get_controlled_did_documents.rs  get_controlled_dids.rs  get_did_document.rs  is_controller_of.rs  is_did_controller.rs  mod.rs  update_did_document.rs
