[package]
name = "did-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.1.3", features = ["staking"] } # remove staking feature
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
cosmwasm-schema = "2.1.3"
schemars = "0.8.21"
sylvia = "1.2.1"
constcat = "0.5.0"
thiserror = "1.0.64"

[dev-dependencies]
sylvia = { version = "1.1.0", features = ["mt"] }
cw-multi-test = "2.1.1"
serde_json = "1.0.128"
bollard = "*"
tokio = { version = "1", features = ["full"] }
cosmrs = { version = "0.20", features = ["cosmwasm"] }
cosmos-sdk-proto = { version = "0.25", features = ["serde", "grpc"] }
reqwest = { version = "0.12", features = ["blocking"] }
# cometbft = "0.1.0-alpha.2"
# cometbft-rpc = { version = "0.1.0-alpha.2", features = ["http-client"]}
k256 = "0.13.4"
tendermint = "0.39"
tendermint-rpc =  { version = "0.39", features = ["http-client"]}
hex = "0.4"
bip39 = "2.0.0"
hdpath = "0.6.3" 
bip32 = "0.5.2"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
bytes = "1.7"
base64 = "0.22"
ctor = "0.2"
serial_test = "3.1"
once_cell = "1.19" 