[package]
name = "did-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "~2.2.2", features = ["staking"] } # remove staking feature
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
cosmwasm-schema = "2.1.3"
schemars = "0.8.21"
sylvia = "1.3.5"
constcat = "0.6.0"
thiserror = "2.0.12"

[dev-dependencies]
sylvia = { version = "1.3.5", features = ["mt"] }
cw-multi-test = "2.1.1"
serde_json = "1.0.128"
cosmrs = { version = "0.22", features = ["cosmwasm"] }
serial_test = "3.1"